Corrected spelling of Shwartzbaum in paper 19
s/b Schwartzbaum; correct in bib

--- a/content/3-open-questions/19.md
+++ b/content/3-open-questions/19.md
@@ -35,7 +35,7 @@ Papers and discussion during the 1975 ICOM-CC conference in Venice led to a reva
 
 As part of his system, Mehra used a low-pressure “cold” table.[^1] Like the tables introduced by Bent Hacke in the 1960s, it pulled high volumes of air through a perforated surface into a plenum below. This enabled drying of an aqueous adhesive while maintaining (low) pressure on the painting ({% cite 'Hacke 1978' %}; {% cite 'Hacke 1981b' %}). The design of these “suction” tables proliferated, allowing for controlled humidification for relaxation and flattening treatments of paintings, both on and off their auxiliary supports. (See [Jim Coddington’s article](/3-open-questions/20/) in these proceedings.)
 
-New lining fabrics and new adhesives were also introduced. Mehra used a woven polyester fabric and a thickened acrylic dispersion ({% cite 'Mehra 1981' %}). Conservators in Europe turned to acrylic dispersions for cold or low heat, nap-bond linings; Alois Diethelm commercialized these adhesives under the mark Lascaux. In the US, conservators turned to heat-seal adhesives: Rabin developed a nap-bond system based on PVA adhesives,[^2] Berger developed Beva 371 based on ethylene vinyl acetate. Fieux developed Fabri-Sil linings, a pressure-sensitive silicone adhesive cured onto Teflon-impregnated fiberglass ({% cite 'Fieux 1978' %}; {% cite 'John G. Shelley Co. 1985' %}). (Initially, Fabri-Sil looked like an excellent option, but bonds failed within a few years [{% cite 'Shwartzbaum 1993' %}; {% cite 'Belloli 1993' %}].)
+New lining fabrics and new adhesives were also introduced. Mehra used a woven polyester fabric and a thickened acrylic dispersion ({% cite 'Mehra 1981' %}). Conservators in Europe turned to acrylic dispersions for cold or low heat, nap-bond linings; Alois Diethelm commercialized these adhesives under the mark Lascaux. In the US, conservators turned to heat-seal adhesives: Rabin developed a nap-bond system based on PVA adhesives,[^2] Berger developed Beva 371 based on ethylene vinyl acetate. Fieux developed Fabri-Sil linings, a pressure-sensitive silicone adhesive cured onto Teflon-impregnated fiberglass ({% cite 'Fieux 1978' %}; {% cite 'John G. Shelley Co. 1985' %}). (Initially, Fabri-Sil looked like an excellent option, but bonds failed within a few years [{% cite 'Schwartzbaum 1993' %}; {% cite 'Belloli 1993' %}].)
 
 To avoid the use of heat or moisture to activate adhesives, solvent activation was studied ({% cite 'Phenix and Hedley 1984' %}; {% cite 'Phenix and Hedley 1993' %}). Unfortunately, safety issues with electric blowers and pumps prevented us from fully incorporating this into our practice at the time. With the current mist-lining techniques of Jos van Och, we see the resurgence of solvent activation ({% cite 'van Och and Hoppenbrouwers 2003' %}).
 
