Fixed Applebaum 1987 citation and mentions paper 21
s/b Appelbaum, as correct in bib

--- a/content/3-open-questions/21.md
+++ b/content/3-open-questions/21.md
@@ -36,7 +36,7 @@ This paper was presented at the 2019 Conserving Canvas Symposium held at the Ins
 
 ### Reversibility
 
-The first requirement is that the materials used should remain fully reversible ([table 21.1](#table-21-1)). According to Applebaum, the “principle of reversibility” was written into the AIC code of ethics and it was advised that the conservator “should avoid the use of materials which may become so intractable that their future removal could endanger the physical safety of the object. He also should avoid the use of techniques the results of which cannot be un-done if that should become desirable” ({% cite 'Applebaum 1987' %}). However, fully reversible treatments are rarely possible, and the concept has been subject to much discussion. Muñoz Viñas has argued that the greater the reversibility the less the conservator’s responsibility ({% cite 'Muñoz Viñas 2005' %}). Concepts like removability and retreatability ({% cite 'Applebaum 1987' %}; {% cite 'Charteris 1999' %}) have been suggested as alternatives, but these still require an understanding of issues like surface tension, penetration, solubility with age, and peel strength—all topics that are still not properly investigated with respect to lining techniques. Despite the debates around the concept, reversibility is still written into the E.C.C.O. Professional Guidelines, in article IX of the Code of Ethics ({% cite 'E.C.C.O. 2003' %}).
+The first requirement is that the materials used should remain fully reversible ([table 21.1](#table-21-1)). According to Appelbaum, the “principle of reversibility” was written into the AIC code of ethics and it was advised that the conservator “should avoid the use of materials which may become so intractable that their future removal could endanger the physical safety of the object. He also should avoid the use of techniques the results of which cannot be un-done if that should become desirable” ({% cite 'Appelbaum 1987' %}). However, fully reversible treatments are rarely possible, and the concept has been subject to much discussion. Muñoz Viñas has argued that the greater the reversibility the less the conservator’s responsibility ({% cite 'Muñoz Viñas 2005' %}). Concepts like removability and retreatability ({% cite 'Appelbaum 1987' %}; {% cite 'Charteris 1999' %}) have been suggested as alternatives, but these still require an understanding of issues like surface tension, penetration, solubility with age, and peel strength—all topics that are still not properly investigated with respect to lining techniques. Despite the debates around the concept, reversibility is still written into the E.C.C.O. Professional Guidelines, in article IX of the Code of Ethics ({% cite 'E.C.C.O. 2003' %}).
 
 ### Changing the Structure
 
