Fixed spelling of Ornsby et al. 2019 in paper 21
s/b Ormsby; correct in bib

--- a/content/3-open-questions/21.md
+++ b/content/3-open-questions/21.md
@@ -84,7 +84,7 @@ It seems that in the context of Mehra’s paper, the physical indicator was prob
 
 In structural conservation of canvas paintings, very little research progress has been made in the last decades, especially when it comes to predicting the risks of structural conservation treatments. Instead, the tendency has been to avoid treatments. However, one tool that can help us move toward rational risk assessment could be computational finite element modeling to predict stresses and the resultant strain and failure in the painting structure with fluctuating ambient climate conditions. A comprehensive computational model and subsequent parametric studies are missing for both treated and untreated paintings, as is validation of the results through epidemiological paintings collection studies. Computer-generated prediction requires not only detailed model design but also reliable experimental data on material properties that can help answer specific questions about structure and mechanical properties. The potential is promising and can point the way to more solid guides for conservators, but until such a tool exists —with validated results—the best option we have is to rely on risk assessment for guidance.
 
-In cleaning literature, the concept of star diagrams for evaluating specific parameters was developed and used repeatedly ({% cite 'Daudin-Schotte et al. 2013' %}; {% cite 'Chung et al. 2017' %}; {% cite 'Ornsby et al. 2019' %}; {% cite 'Bartoletti et al. 2020' %}). This approach could be useful for other conservation treatments as well, and would follow the trend of preventive conservation that moves away from requirements and recommendations or guidelines toward risk assessments.
+In cleaning literature, the concept of star diagrams for evaluating specific parameters was developed and used repeatedly ({% cite 'Daudin-Schotte et al. 2013' %}; {% cite 'Chung et al. 2017' %}; {% cite 'Ormsby et al. 2019' %}; {% cite 'Bartoletti et al. 2020' %}). This approach could be useful for other conservation treatments as well, and would follow the trend of preventive conservation that moves away from requirements and recommendations or guidelines toward risk assessments.
 
 Linings and related structural treatments are still performed widely, and the different alternatives should be evaluated when choosing a treatment option or considering paintings that have already been lined. A star diagram shows risk factors situated around the center ([fig. 21.1](#fig-21-1)). A value from 1 through 5 is given for each risk factor, with 1 as low risk and 5 as high risk. This is different from the approaches proposed in the articles referenced above, in that it is intuitive that the higher the rating number the higher the risk, and vice versa. Thus, a smaller shape means lower risk, as shown in [fig. 21.1](#fig-21-1). Of course, the scale is a matter of interpretation and must be discussed for each factor.
 
