Fixed CCI 2011 in paper 10
s/b Canadian Conservation Institute 2011; now matches bib

--- a/content/2-present-practice/10.md
+++ b/content/2-present-practice/10.md
@@ -199,7 +199,7 @@ Even when using these modern procedures, I try to apply the same approach I use 
 
 {% endbackmatter %}
 
-[^1]: Of the various texts on the mechanics of paintings, adhesives and consolidants from a conservation perspective, I particularly value {% cite 'CCI 2011' %}, {% cite 'Clarricoates et al. 2012' %}, {% cite 'Mecklenburg and Tumosa 1991b' %}, and {% cite 'Michalski 1991' %}.
+[^1]: Of the various texts on the mechanics of paintings, adhesives and consolidants from a conservation perspective, I particularly value {% cite 'Canadian Conservation Institute 2011' %}, {% cite 'Clarricoates et al. 2012' %}, {% cite 'Mecklenburg and Tumosa 1991b' %}, and {% cite 'Michalski 1991' %}.
 
 [^2]: {% cite 'Ciatti and Signorini 2007' %} is the postprints of a one-day meeting dedicated to traditional Italian lining methods and is the only book that contains a good comparison of Florentine and Roman methods.
 
