Fixed incorrect citation paper 9 Poulis, Seymour, and Yasmine 2020
s/b Poulis, Seymour, and Mosleh 2020

--- a/content/2-present-practice/9.md
+++ b/content/2-present-practice/9.md
@@ -48,7 +48,7 @@ The mist-lining process allows conservators to make the best choice for the need
 
 The decision to use this system comes with a caveat. Expectations for results need to be tempered to accept surfaces that are not as “flat as a board” or linings that are not as “rigid as a plank.” This system does not produce the same degree of surface finish and stiffness provided by traditional linings. The natural drape of the canvas and texture of paint layers will not be significantly altered during lining. Any out-of-plane texture or impasto (including cupping) that exists before lining will be maintained. Consolidation problems are not resolved. The key, as mentioned, is to treat these defects, as necessary, prior to lining and to accept a certain natural “aged” look. (This may mean taking a different approach to dealing with clients or owners of paintings.) Nor does the system provide a stiff lining support. Mist lining moves away from the idea that the lining should carry all the stress within the laminate structure. Instead, a mist lining provides “gentle” support to the original materials, helping to mitigate dimensional changes induced by climatic variations, but not preventing them.
 
-These aspects of the system remain open to debate. No complete scientific study comparing mist-lining results to those of other lining systems has been carried out. This “new” approach thus remains unprovable. However, numerous paintings, large and small in scale and presenting a wide variety of past treatments and conditions, have been lined with this system. These have performed well over the last thirty years, so perhaps the “proof is in the pudding.” Ongoing research aims to provide further insight and answers to these issues ({% cite 'Poulis, Seymour, and Yasmine 2020' %}).
+These aspects of the system remain open to debate. No complete scientific study comparing mist-lining results to those of other lining systems has been carried out. This “new” approach thus remains unprovable. However, numerous paintings, large and small in scale and presenting a wide variety of past treatments and conditions, have been lined with this system. These have performed well over the last thirty years, so perhaps the “proof is in the pudding.” Ongoing research aims to provide further insight and answers to these issues ({% cite 'Poulis, Seymour, and Mosleh 2020' %}).
 
 ## The Mist-Lining Process
 
