Fixed Mehra 1975 cite in paper 28
S/b 1975b

--- a/content/5-adhesives/28.md
+++ b/content/5-adhesives/28.md
@@ -35,7 +35,7 @@ Production and application of adhesive meshes was the objective of a research pr
 
 ## Current Lining Techniques and Materials—Opportunities and Limits
 
-Looking back at the evolution of lining techniques over the last decades, one finds multiple approaches that attempt to reduce the amount of adhesive applied and adhesive penetration, as well as the impact of elevated temperatures, water, or solvents, all of which enable increased reversibility. The most important achievements include Mehra's nap-bond cold-lining ({% cite 'Mehra 1975' %}), Heiber’s *Geweberasterhaftung* (grid adhesion) technique ({% cite 'Heiber 1987' %}), and the more recent mist-lining ({% cite 'van Och and Hoppenbrouwers 2003' %}). Their common characteristic is the application of the adhesive compound as an openly structured layer on the lining canvas, rather than on the original canvas. When dried and solid, it is reactivated by means of heat or solvents.
+Looking back at the evolution of lining techniques over the last decades, one finds multiple approaches that attempt to reduce the amount of adhesive applied and adhesive penetration, as well as the impact of elevated temperatures, water, or solvents, all of which enable increased reversibility. The most important achievements include Mehra's nap-bond cold-lining ({% cite 'Mehra 1975b' %}), Heiber’s *Geweberasterhaftung* (grid adhesion) technique ({% cite 'Heiber 1987' %}), and the more recent mist-lining ({% cite 'van Och and Hoppenbrouwers 2003' %}). Their common characteristic is the application of the adhesive compound as an openly structured layer on the lining canvas, rather than on the original canvas. When dried and solid, it is reactivated by means of heat or solvents.
 
 Adhesives based on synthetic polymers are popular for those and most other lining applications today, including heat-seal adhesives like Beva 371 and different polymer dispersions. However, all are composed of highly complex formulations, prone to segregation, altering mechanical properties, and they often exhibit poor long-term stability.[^1] Surfactants in acrylic dispersions, for instance, can degrade or migrate from the bulk adhesive, whereas the plasticizer in Beva 371 is basically able to migrate into the painting structure ({% cite 'Cimino et al. 2020' %}; {% cite 'Lazzari et al. 2011' %}). Of utmost concern, though, are modifications of the composition without indication by the manufacturer, as well as renaming and discontinuation of products, resulting in altered working and aging properties ({% cite 'Cimino et al. 2020' %}; {% cite 'Ploeger, McGlinchey, and de la Rie 2015' %}). In addition, application of synthetic polymer adhesives requires high temperatures (in excess of 60°C) or harmful solvents, which might also pose a risk to paint layers. Although modern techniques emphasize reversibility, inevitable residues may limit the options for further treatments.
 
