Fixed citation paper 28 for Witte, Florquin, and Goessens-Landie 1984
Was incorrectly spelled Florqin originally

--- a/content/5-adhesives/28.md
+++ b/content/5-adhesives/28.md
@@ -121,7 +121,7 @@ The authors would like to thank the following persons and organizations for thei
 
 {% endbackmatter %}
 
-[^1]: See {% cite 'Bianco et al. 2015' %}; {% cite 'Cimino et al. 2020' %}; {% cite 'Witte, Florqin, and Goessens-Landrie 1984' %}; {% cite 'Down 2015' %}; {% cite 'Howells et al. 1984' %}; {% cite 'Lazzari et al. 2011' %}; {% cite 'McGlinchey et al. 2011' %}; {% cite 'Ploeger, McGlinchey, and de la Rie 2015' %}; {% cite 'Silva, Doménech-Carbó, and Osete-Cortina 2015' %}.
+[^1]: See {% cite 'Bianco et al. 2015' %}; {% cite 'Cimino et al. 2020' %}; {% cite 'Witte, Florquin, and Goessens-Landrie 1984' %}; {% cite 'Down 2015' %}; {% cite 'Howells et al. 1984' %}; {% cite 'Lazzari et al. 2011' %}; {% cite 'McGlinchey et al. 2011' %}; {% cite 'Ploeger, McGlinchey, and de la Rie 2015' %}; {% cite 'Silva, Doménech-Carbó, and Osete-Cortina 2015' %}.
 
 [^2]: This is less than the weight of Beva 371 film (25 µm): 43 g/m².
 
