Fixed citation of Mecklenburg 2007 in paper 34
s/b Mecklenburg 2007c

--- a/content/6-interventions/34.md
+++ b/content/6-interventions/34.md
@@ -38,7 +38,7 @@ In the nineteenth century, we find an earlier massive campaign of restoration, w
 
 Restoration practices in the various private collections are less well known. Again, archival documents are of help. In those of the Corsini family we find paintings on which worked G. B. Beretta ({% cite 'Ventra 2016' %})—a restorer who also worked with Minardi—and going back in time, Palmaroli ({% cite 'Cosma 2016' '180ff.' %}) and Principe ({% cite 'Magnamini 1980a' %}; {% cite 'Magnamini 1980b' %}). So the same names come up in both the private and public sectors, and through these we will get a better picture of the Roman system.
 
-In the National Gallery, we have few examples of linings dating back to the nineteenth century, even though the period is rather well known through the historical research cited. Such documentation tends to be of a more theorical (almost sterile) nature, and we are unable to match it with the technical evidence. Just a few linings from the nineteenth century, or even the earlier part of the twentieth, are preserved—a result of the general use of greater quantities of glue paste and of coarser and heavier canvases for linings, which has made them more fragile and more susceptible to changes in relative humidity and temperature ({% cite 'Mecklenburg 2007' %}; {% cite 'CESMAR7 2008' %}; {% cite 'Ciatti and Signorini 2006' %}; {% cite 'Roche 2003' %}) than the earlier linings described in some detail in later sections of this paper.
+In the National Gallery, we have few examples of linings dating back to the nineteenth century, even though the period is rather well known through the historical research cited. Such documentation tends to be of a more theorical (almost sterile) nature, and we are unable to match it with the technical evidence. Just a few linings from the nineteenth century, or even the earlier part of the twentieth, are preserved—a result of the general use of greater quantities of glue paste and of coarser and heavier canvases for linings, which has made them more fragile and more susceptible to changes in relative humidity and temperature ({% cite 'Mecklenburg 2007c' %}; {% cite 'CESMAR7 2008' %}; {% cite 'Ciatti and Signorini 2006' %}; {% cite 'Roche 2003' %}) than the earlier linings described in some detail in later sections of this paper.
 
 One example of a painting with a nineteenth-century lining is the *Glory of Saint Ignatius* ([fig. 34.2](#fig-34-2)), by A. Pozzo (inventory 1426). The restoration is dated 1884 on the stretcher, the canvas is of a heavy and tightly woven, herringbone weave, and the adhesive rich in animal glue. On the canvas are marks that seem to be the result of burns from the application of hot irons. The stretcher is pine, with crossbars and keys, but it is essentially inadequate; clearly evident on the picture surface are the stretcher marks, as well as flattening of the paint. The inscriptions that accompany the restoration, on the stretcher, are grammatically incorrect, once again relegating the restorers to the “mechanical,” uneducated sphere. Another *bozzetto* for Pozzo’s tromp l’oeil dome of the church of Saint Ignazio (inventory 1425), has very similar characteristics and was also lined in 1884, so one can infer that it was carried out by the same restorer.
 
