Fixed paper 34 citation Fuster-Lopez 2017
s/b Fuster-López et al. 2017

--- a/content/6-interventions/34.md
+++ b/content/6-interventions/34.md
@@ -78,7 +78,7 @@ Because recipes were considered workshop secrets, we do not know their details, 
 
 It is likely that the use of animal glue became necessary when serious structural problems were encountered, such as how to reduce serious deformations, tears, or blistering of the paint layers. The adhesive properties of flour-paste glues are linked to the presence of gluten, which is extracted after fifteen minutes of cooking at 70°C–80°C. The addition of glues can therefore only occur after this operation has been carried out, as the temperature used would alter the collagen and therefore its adhesive properties. In the Roman recipe, one uses bone glue, *colla cervione.* It is rich in impurities, short-chained, and both fragile and stiff, while also having great adhesive strength and resistance to sudden shocks.
 
-The ratio of flour to glue is the critical element in the formulation of the glue-paste adhesive, on which depends its response to changes in humidity and to biological attack ({% cite 'Fuster-Lopez 2017' %}). It is now clear that all the additives were included in the formulation to render the paste more elastic and to retard its drying ({% cite 'Lavorini 2007' %}; {% cite 'Laroche and Saccarello 1996' %}), and that they also play a role in the aging of the paste ({% cite 'Ackroyd 1996' %}).
+The ratio of flour to glue is the critical element in the formulation of the glue-paste adhesive, on which depends its response to changes in humidity and to biological attack ({% cite 'Fuster-López et al. 2017' %}). It is now clear that all the additives were included in the formulation to render the paste more elastic and to retard its drying ({% cite 'Lavorini 2007' %}; {% cite 'Laroche and Saccarello 1996' %}), and that they also play a role in the aging of the paste ({% cite 'Ackroyd 1996' %}).
 
 That the original basic recipe contained little or no animal glue can be deduced from the color of the adhesive, which in the older linings is very light, although it should be darker because the type of flour used was less refined and therefore full of husks, and itself darker in color. So the lightness of the adhesive must be related to the amount of animal glue present in the recipe. Orlandi, in the *Abecedario pittorico*, first published in 1704, proposes a flour-paste glue, without the addition of animal glue ({% cite 'Orlandi 1753' '548' %}). We know that the glue was added soon after; for example, Edwards, only fifty years later in Venice, suggests adding German glue, that is strong ox glue (*colla forte*). Edwards also uses a starch-paste glue for his facings and for localized consolidation; and in his descriptions of works requiring restoration, he refers to patches that are poorly attached because of the inadequacy of the “paste made from gluten” (*gluttini*) ({% cite 'Tiozzo 2000' '152' %}). The difference in terminology, which alludes to a material difference, continues over time up to the Forni manual, which still reports patches that are either “pasted or glued on” ({% cite 'Bonsanti and Ciatti 2004' 'ch. 3' %}).
 
