--- a/content/6-interventions/31.md
+++ b/content/6-interventions/31.md
@@ -56,7 +56,7 @@ This paper uses four case studies undertaken at Amann + Estabrook Conservation A
 
 ## Verso Reinforcements
 
-At Amann + Estabrook, Gore-Tex sutures[^1] sewn into the weave matrix have been found to provide a passive, inert, and flexible support network that helps counter mechanical forces ({% cite 'Hartman 2017' %}; {% cite 'Piotrowska and Amann 2009' %}). They are fully reversible and can be removed easily if required. The sutures also lend themselves to variations and can be adapted to suit each individual case. They can be varied in length, concentration, and sewing methods, thereby reducing the potential for telegraphing through to the face.
+At Amann + Estabrook, Gore-Tex sutures[^1] sewn into the weave matrix have been found to provide a passive, inert, and flexible support network that helps counter mechanical forces ({% cite 'Hartmann 2017' %}; {% cite 'Piotrowska and Amann 2009' %}). They are fully reversible and can be removed easily if required. The sutures also lend themselves to variations and can be adapted to suit each individual case. They can be varied in length, concentration, and sewing methods, thereby reducing the potential for telegraphing through to the face.
 
 Gore-Tex sutures, commonly used in dental surgery, are a microporous, flexible polytetrafluoroethylene monofilament with a stainless-steel needle fused to either end of the monofilament. They are soft and easy to manipulate. They can also be dyed to match the fabric support of a painting, and thus be a discreet addition to a conservation treatment. They come in a variety of monofilament thicknesses, needle gauges, and needle types. Generally, the preferred Gore-Tex suture for most treatments where suture reinforcements are needed is the thinnest gauge: monofilament CV-8 with a needle gauge of TTc-7 and a taper needle shape.
 
