Fixed citation poster 56 Mecklenburg, Fuster-López, and Ottoloni 2012
s/b Ottolini as in bib

--- a/content/8-posters/56.md
+++ b/content/8-posters/56.md
@@ -69,7 +69,7 @@ Research on previous consolidation campaigns with similar objects reveal the use
 
 The properties of the chosen materials were researched with recommendations from the available literature,[^10] and further mixtures were selected, including particular additives. The 11 formulas chosen included polyethyloxazoline (PEOX) solutions, including Aquazol 200 and 500; polyvinyl alcohol (Mowiol 4-88), acrylic solutions as Degalan P 550 and Paraloid B72, nonionic cellulose ethers, such as MC and MHEC, as well as Celluforce NCC cellullose nanocrystals ({% cite 'Bridarolli et al. 2018b' %}) (see [table 56.3](#table-56-3)). Aquazol was selected given its versatility, nontoxicity, minimal interaction with the constituent materials of paintings, and good reversibility ({% cite 'Bosetti 2012' %}). To enhance the diffusion of the consolidant and its efficiency, surface cleaning and prewetting was carried out selectively.
 
-Considering the dry environment of current storage, Aquazol 500—stronger than Aquazol 200 ({% cite 'Mecklenburg, Fuster-López, and Ottoloni 2012' '21' %}) but with lower penetration ({% cite 'Arslanoglu and Tallent 2003' %})—was used instead of protein glues, assuring optimum penetration, plasticization, and the necessary workability to reattach the flakes. The addition of 1% Celluforce NCC helped improving the interlayer adhesion and grip while simultaneously reinforcing the degraded canvas. Culminal 2000, a methylcellulose derivative, was added to impart gelled consistency to the adhesive, decreasing the RH responsiveness ({% cite 'Arslanoglu 2004' %}) and better performance in filling gaps between shrunken ground and canvas threads. Repeated applications by brush and syringe and both cold mechanical pressure using a silicon tool and the heated spatula proved useful in achieving satisfactory adhesion and a stabilization of canvas and paint on both sides of the banner ([fig. 56.3](#fig-56-3)).
+Considering the dry environment of current storage, Aquazol 500—stronger than Aquazol 200 ({% cite 'Mecklenburg, Fuster-López, and Ottolini 2012' '21' %}) but with lower penetration ({% cite 'Arslanoglu and Tallent 2003' %})—was used instead of protein glues, assuring optimum penetration, plasticization, and the necessary workability to reattach the flakes. The addition of 1% Celluforce NCC helped improving the interlayer adhesion and grip while simultaneously reinforcing the degraded canvas. Culminal 2000, a methylcellulose derivative, was added to impart gelled consistency to the adhesive, decreasing the RH responsiveness ({% cite 'Arslanoglu 2004' %}) and better performance in filling gaps between shrunken ground and canvas threads. Repeated applications by brush and syringe and both cold mechanical pressure using a silicon tool and the heated spatula proved useful in achieving satisfactory adhesion and a stabilization of canvas and paint on both sides of the banner ([fig. 56.3](#fig-56-3)).
 
 {% figure 'fig-56-3' %}
 
@@ -109,4 +109,4 @@ This study would not have been possible without the expertise, goodwill, and act
 
 [^10]: Adding 10% Aquazol 200 to Paraloid B72 improves qualities of B72 in acetone ({% cite 'Wolbers 2008' '115' %}).
 
-[^11]: The adhesive and cohesive properties of Beva are assessed in depth, compared to other conservation products ({% cite 'Mecklenburg, Fuster-Lopez, and Ottoloni 2012' %}).
+[^11]: The adhesive and cohesive properties of Beva are assessed in depth, compared to other conservation products ({% cite 'Mecklenburg, Fuster-Lopez, and Ottolini 2012' %}).
