Fixed citation for Witte, Florquin, and Goessens-Landrie 1984 paper 53

--- a/content/8-posters/53.md
+++ b/content/8-posters/53.md
@@ -59,7 +59,7 @@ The lining adhesive was rolled rather than sprayed on to the lining support. Thi
 
 ### Lining Adhesive
 
-The lining adhesive consisted of 70% Dispersion K 360 (pH adjusted with ammonium hydroxide), 30% Plextol D540, thickened with Rohagit SD 15, all v/v. Plextol acrylic dispersion products have been used for lining since the 1970s, and extensive research has established their aging properties ({% cite 'Down et al. 1996' %}; {% cite 'de Witte, Florquin, and Goessens-Landrie 1984' %}; {% cite 'Mehra 1984' %}). However, these products are subject to market influences and, thus, since the product formulations and availability have changed, the reported results may no longer be valid for products mentioned in this essay.[^7]
+The lining adhesive consisted of 70% Dispersion K 360 (pH adjusted with ammonium hydroxide), 30% Plextol D540, thickened with Rohagit SD 15, all v/v. Plextol acrylic dispersion products have been used for lining since the 1970s, and extensive research has established their aging properties ({% cite 'Down et al. 1996' %}; {% cite 'Witte, Florquin, and Goessens-Landrie 1984' %}; {% cite 'Mehra 1984' %}). However, these products are subject to market influences and, thus, since the product formulations and availability have changed, the reported results may no longer be valid for products mentioned in this essay.[^7]
 
 Dispersion K 360 is too soft, sticky, and flexible to make a satisfying lining adhesive alone. Combining it with Plextol D540, which has a higher molecular weight and an accordingly higher glass transition (Tg) temperature, achieves the desired stiffness of the lining adhesive. The ratio of the two acrylic dispersions is 70:30 (v:v). Adding an emulsifier, Rohagit SD 15 (also a polymethacrylic acid), increased the viscosity of the mixture, thus improving application properties and preventing impregnation of the lining adhesive into the original canvas and the lining fabric during the reactivation process. The pH of the adhesive mixture was raised to 7 using ammonium hydroxide (NH<sub>4</sub>OH).
 
