Fixed spelling of Boissonnas citations in paper 53
spelled Boissonas

--- a/content/8-posters/53.md
+++ b/content/8-posters/53.md
@@ -65,7 +65,7 @@ Dispersion K 360 is too soft, sticky, and flexible to make a satisfying lining 
 
 ### Interleaf Fabric
 
-Glass-fiber fabric was selected for its high tensile strength, dimensional stability, low moisture absorption, and high resistance to solvents and chemicals, all of which contribute to its great durability ({% cite 'Boissonas 1961' %}). It is also lightweight and provides extra strength without introducing additional tension, weight, or thickness to the new lining system ({% cite 'Boissonas 2003' %}). Glass-fiber fabrics use bundles of monofilament glass threads to create the weave. This woven textile does not have a nap, and a nap cannot be created without disrupting the weave draft. The lining adhesive mixture, therefore, is best applied by rolling it onto the stretched fabric. This produces an even, textured surface, promoting adhesion. The moisture content is then allowed to evaporate. The dried adhesive produces a soft and elastic film, which encases the interleaf material and is stiff enough to prevent creep formation ({% cite 'Seymour and van Och 2005' '99' %}). This fabric is available in widths of up to 90 cm; bands of the prepared material were used.
+Glass-fiber fabric was selected for its high tensile strength, dimensional stability, low moisture absorption, and high resistance to solvents and chemicals, all of which contribute to its great durability ({% cite 'Boissonnas 1961' %}). It is also lightweight and provides extra strength without introducing additional tension, weight, or thickness to the new lining system ({% cite 'Boissonnas 2003' %}). Glass-fiber fabrics use bundles of monofilament glass threads to create the weave. This woven textile does not have a nap, and a nap cannot be created without disrupting the weave draft. The lining adhesive mixture, therefore, is best applied by rolling it onto the stretched fabric. This produces an even, textured surface, promoting adhesion. The moisture content is then allowed to evaporate. The dried adhesive produces a soft and elastic film, which encases the interleaf material and is stiff enough to prevent creep formation ({% cite 'Seymour and van Och 2005' '99' %}). This fabric is available in widths of up to 90 cm; bands of the prepared material were used.
 
 ### Lining Fabric
 
