Fixed citation paper 53 Seymour and Och 2005
s/b Seymour and van Och 2005

--- a/content/8-posters/53.md
+++ b/content/8-posters/53.md
@@ -115,7 +115,7 @@ The authors thank Ana Pereira for the FTIR-ATR analysis, Ilona Jaaranen and Basc
 
 [^4]: The cold-lining practiced was developed under Jos van Och’s expertise and is inspired by the mist-lining system.
 
-[^5]: For a detailed description see {% cite 'Seymour and Och 2005' %}.
+[^5]: For a detailed description see {% cite 'Seymour and van Och 2005' %}.
 
 [^6]: For treatment steps other than lining see {% cite 'Barbosa et al. 2015' %}.
 
