Fixed Helwig 2014 cite paper 54
s/b Helwig et al. 2014

--- a/content/8-posters/54.md
+++ b/content/8-posters/54.md
@@ -23,7 +23,7 @@ A small, unstretched oil-on-canvas painting (ca. 1910), attributed to Tom Thomso
 
 According to the description provided by the gallery, prior to its acquisition the unstretched painting had been rolled (pre-1970), and then laid flat in the early 1970s by its then owner.
 
-The paint and ground layers were cracked from being rolled and the cracking was exacerbated by the thickness of the paint layer(s) and by the brittleness of paint and ground. The cotton fabric support is a tight-weave, lightweight, untensioned canvas, which is extremely responsive to relative humidity fluctuations. The canvas, especially in areas where the paint is heavily applied, had developed local bulges from the tension exerted by the paint layers. Where the paint is cracked, tension had been released, so bulging often begins between and around areas of cracking in the paint and ground. Analyses had identified zinc fatty-acid salts (zinc soaps) in a beige paint layer applied as a primer above the ground. Microfissures had formed and may be associated with the cracking of the paint and the delamination between the priming and ground layer ({% cite 'Helwig 2014' %}).
+The paint and ground layers were cracked from being rolled and the cracking was exacerbated by the thickness of the paint layer(s) and by the brittleness of paint and ground. The cotton fabric support is a tight-weave, lightweight, untensioned canvas, which is extremely responsive to relative humidity fluctuations. The canvas, especially in areas where the paint is heavily applied, had developed local bulges from the tension exerted by the paint layers. Where the paint is cracked, tension had been released, so bulging often begins between and around areas of cracking in the paint and ground. Analyses had identified zinc fatty-acid salts (zinc soaps) in a beige paint layer applied as a primer above the ground. Microfissures had formed and may be associated with the cracking of the paint and the delamination between the priming and ground layer ({% cite 'Helwig et al. 2014' %}).
 
 ## Treatment Considerations
 
