Fixed citation Iaccarino 2009 in poster 59
S/b Iaccarino Idelson 2009

--- a/content/8-posters/59.md
+++ b/content/8-posters/59.md
@@ -36,7 +36,7 @@ The continuous environmental changes to which paintings on canvas are subjected 
 
 In 1950, Roberto Carità carried out the first studies on the quantification of the mechanical tension forces and made the first prototype of a frame with springs ({% cite 'Carità 1955' %}). Gustav Berger and William Russell carried out experimental tests showing that canvases are capable of withstanding a maximum tension of 100 N/m when exposed to environmental conditions of 21°C and 60% RH ({% cite 'Berger and Russell 2000' %}).
 
-In more recent research, Antonio Iaccarino has analyzed what could be the most suitable tension parameters for paintings on canvas mounted on frames modified with a spring system. According to the results, the tensions should be between 1.5 N/cm to 2.6 N/cm, with some cases being acceptable up to 3.4 N/cm ({% cite 'Iaccarino 2009' %}).
+In more recent research, Antonio Iaccarino Idelson has analyzed what could be the most suitable tension parameters for paintings on canvas mounted on frames modified with a spring system. According to the results, the tensions should be between 1.5 N/cm to 2.6 N/cm, with some cases being acceptable up to 3.4 N/cm ({% cite 'Iaccarino Idelson 2009' %}).
 
 ### Thread Tension Tests
 
