Fixed citation Standevan 2011 paper 62
s/b spelled Standeven

--- a/content/8-posters/62.md
+++ b/content/8-posters/62.md
@@ -81,7 +81,7 @@ Priming layer combinations varied ([fig. 62.2](#fig-62-2)). Double priming layer
 
 Variations were observed between ATR-FTIR and Py-GCMS data, including a significantly higher incidence of PVA detected with Py-GCMS. This was found to correlate with the presence of PVA in lower priming layers not captured by the surface-only ATR-FTIR. Thin surface layers were sometimes difficult to separate from other similarly colored layers for Py-GCMS analysis ([fig. 62.2d](#fig-62-2)) ({% cite 'Osmond et al. 2018' %}).
 
-In total, thirty-four different copolymer binder combinations in the upper layer were found in the surface layer of the forty-nine synthetic-primed samples—indicating a wide variety of formulations and subsequent properties. The history of synthetic emulsion binders and copolymer properties is well documented, including in conservation literature ({% cite 'Scalarone and Chiantore 2004' %}; {% cite 'Learner 2004' %}; {% cite 'Croll 2007' %}; {% cite 'Standevan 2011' %}), which describes how copolymers are formulated to provide optimal coating properties. For example, adding monomers that have a higher glass transition temperature (Tg), such as styrene (or MMA), to a “soft” acrylic monomer such as n-butyl acrylate results in a stiffer and possibly more heat tolerant priming, depending on the monomer ratio ([table 62.2](#table-62-2)).
+In total, thirty-four different copolymer binder combinations in the upper layer were found in the surface layer of the forty-nine synthetic-primed samples—indicating a wide variety of formulations and subsequent properties. The history of synthetic emulsion binders and copolymer properties is well documented, including in conservation literature ({% cite 'Scalarone and Chiantore 2004' %}; {% cite 'Learner 2004' %}; {% cite 'Croll 2007' %}; {% cite 'Standeven 2011' %}), which describes how copolymers are formulated to provide optimal coating properties. For example, adding monomers that have a higher glass transition temperature (Tg), such as styrene (or MMA), to a “soft” acrylic monomer such as n-butyl acrylate results in a stiffer and possibly more heat tolerant priming, depending on the monomer ratio ([table 62.2](#table-62-2)).
 
 {% figure 'table-62-2' %}
 
