took TK credit info out of captions for figs for poster 46

--- a/content/8-posters/46.md
+++ b/content/8-posters/46.md
@@ -22,7 +22,7 @@ In this poster, textiles that have been hidden for centuries between paint and l
 
 ### El Greco
 
-{% figuregroup '2' 'fig-46-1-a, fig-46-1-b, fig-46-1-c, fig-46-1-d' 'El Greco (Greek, 1541–1614), *The Burial of the Count of Orgaz*, 1586. Oil on canvas, 480 x 360 cm (189 x 141 3/4 in.). (a) Piece of original canvas showing weave pattern. (b) Weave draft ([[De los Rios y Rojas and Socorro 1977]]). (c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a and b) [[De los Rios y Rojas and Socorro 1977]] (TK credit, might change), (c) Lab O, (d) Lab O / João Mariano' %}
+{% figuregroup '2' 'fig-46-1-a, fig-46-1-b, fig-46-1-c, fig-46-1-d' 'El Greco (Greek, 1541–1614), *The Burial of the Count of Orgaz*, 1586. Oil on canvas, 480 x 360 cm (189 x 141 3/4 in.). (a) Piece of original canvas showing weave pattern. (b) Weave draft ([[De los Rios y Rojas and Socorro 1977]]). (c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a and b) [[De los Rios y Rojas and Socorro 1977]], (c) Lab O, (d) Lab O / João Mariano' %}
 
 ### Titian
 
